# Messanger2

./: CMakeLists.txt  LICENSE
src/: help.cpp  help.h  photo_redactor.cpp  photo_redactor.h  read_file.cpp  read_file.h  save_load_chat.cpp  save_load_chat.h  user.cpp  user.h
src/app/: main.cpp
src/include/: include.h
src/messages/: abstract.cpp  abstract.h  photo_message.cpp  photo_message.h  text_message.cpp  text_message.h
src/messanger/: messanger.cpp  messanger.h  scroll_chat.cpp  scroll_chat.h  tools.cpp  tools.h
src/messanger/tool_bar/: tools.cpp  tools.h
src/net/: client.cpp  client.h  work.cpp  work.h
styles/: button.css  chat.css  copy_text_from_message_button.css  main.css  message.css  message_item.css  message_text.css  tool_bar.css  user_wifi_buttons.css
